# beagle

./: .gitignore  .gitmodules  ABC.md  CLAUDE.md  CMakeLists.txt  INDEX.md  README.md  README.mkd  STORE.md  VERBS.md  bro.js  delete.js  get.js  loop.js  main.js  patch.js  post.js  put.js  refs.js  status.js
.dogs/: config
.github/workflows/: ci.yml  release.yml
beagle/: BE.cli.c  CMakeLists.txt  DISPATCH.c  DISPATCH.h  INDEX.md  README.md  SUBS.c  SUBS.h
beagle/test/: CMakeLists.txt  be-blob-projector.sh  be-clone-sniff.sh  be-delete-alias.sh  be-delete-branch-descendants.sh  be-delete-branch-resurrect.sh  be-delete-branch-wt-on-it.sh  be-delete-branch.sh  be-delete-path.sh  be-diff-projector.sh  be-get-absolute-miss.sh  be-get-clean-switch.sh  be-get-create-on-miss.sh  be-get-dirty-cross.sh  be-get-dirty-overlap.sh  be-get-nosub.sh  be-get-overlay-clean.sh  be-get-overlay-delete-clean.sh  be-get-overlay-delete-dirty.sh  be-get-overlay-no-baseline.sh  be-get-overlay-real.sh  be-get-restore-wiped.sh  be-get-sub-unmount-clean.sh  be-log-projector.sh  be-map-projector.sh  be-patch-clean.sh  be-patch-noop.sh  be-post-cross-create.sh  be-post-empty.sh  be-post-ff.sh  be-post-nonff.sh  be-post-nosub.sh  be-post-path-reject.sh  be-post-put-banner.sh  be-post-rebase.sh  be-post-relpath.sh  be-put-path.sh  be-status-ahead-behind.sh  be-unknown-command.sh  blobs-from-git.sh  (+21 more)
bro/: BRO.c  BRO.cli.c  BRO.exe.c  BRO.h  CMakeLists.txt  INDEX.md  README.md
bro/test/: CMakeLists.txt  EXEC.c  NAV.c  OPEN.c  SEARCH.c  WRAP.c
core/: barrier.js  discover.js  emit.js  job.js  loop.js  recurse.js  registry.js  resolve.js  resolve_hash.js
graf/: BLAME.c  BLOB.c  BLOB.h  BRAM.c  BRAM.h  CMakeLists.txt  DAG.c  DAG.h  DIFF.c  DIFFREF.c  GET.c  GET.md  GRAF.c  GRAF.cli.c  GRAF.exe.c  GRAF.h  INDEX.c  INDEX.md  JOIN.c  JOIN.h  LOG.c  MAP.c  MERGE.c  NEIL.c  NEIL.h  REBASE.c  REBASE.h  TDIFF.c  TDIFF.h  WEAVE.c  WEAVE.h
graf/bench/: blame-ab.sh  blame.sh
graf/fuzz/: CMakeLists.txt  NEIL.c  WEAVE.c  WEAVE2.c
graf/test/: BRAM01.c  CMakeLists.txt  DAG01.c  MERGE3B01.c  MERGEWT01.c  MMAP01.c  NEIL01.c  REBASE01.c  REBASE02.c  WEAVE01.c  WEAVE2.c  blame-bignoroom.sh  blame-identical.sh  blame-perf.sh  blame-readd.sh  blame-runs.sh  diff_test.sh  get.sh  merge-from-git.sh  mill-merges.sh  toy.sh
keeper/: CLOSE.c  CLOSE.h  CMakeLists.txt  DELT.c  GIT.c  GIT.h  INDEX.md  KEEP.c  KEEP.cli.c  KEEP.exe.c  KEEP.h  LOG.md  MIGRATE.c  PACK.c  PROJ.c  PROJ.h  PSTR.c  README.md  RECV.c  RECV.h  REF.md  REFADV.c  REFADV.h  REFS.c  REFS.h  RESOLVE.c  RESOLVE.h  SUBS.c  SUBS.h  UNPK.c  UNPK.h  WALK.c  WALK.h  WIRE.c  WIRE.h  WIRECLI.c  git-dl.cli.c
keeper/test/: BOOKMARK.c  CLOSE.c  CMakeLists.txt  DELT.c  DELTA_ROUND.c  FETCH.c  GIT.c  KEEP.c  LOAD_CLONE.sh  MERGE.c  PACK.c  PKT.c  PSTR.c  RECEIVEPACK.c  REFADV.c  REFKIND.c  REFS.c  RESOLVEURI.c  ROUND.c  SERVEPATH.c  THIN.c  UNPK.c  UPLOADPACK.c  WALK.c  WIRE.c  WIREE2EREFETCH.c  WIREREFETCH.c  WIRE_CLIENT.c  WIRE_RL.c  ZINF.c  alias_ref.sh  treadmill.sh
lib/: be.js  bro.js  checkout.js  classify.js  commit.js  conflict.js  dag.js  decide.js  ingest.js  patchscope.js  pkt.js  render.js  stage.js  store.js  subs.js  ulog.js  wire.js  wtlog.js
mark/: CMakeLists.txt  INDEX.md  MARK.c  MARK.cli.c  MARK.h  MARKE.c.rl  MARKE.rl.c  MARKG.c.rl  MARKG.rl.c  README.mkd
mark/fuzz/: CMakeLists.txt  MARK.c  lsan.supp
mark/test/: CMakeLists.txt  MARK.c  strict-dir.sh
scripts/: ci-fast.sh  ok64-audit.sh  ok64-rewrite.sh
shared/: branch.js  changedpaths.js  checkout.js  classify.js  dag.js  gitmodules.js  graf.js  hunkrows.js  idxmaint.js  ingest.js  nav.js  patchscope.js  pkt.js  project.js  quad.js  relate.js  serve.js  spell.js  stage.js  store.js  submount.js  subs.js  ticket.js  uri.js  weave.js  wire.js  wtlog.js  wtread.js
shared/util/: ignore.js  path.js  sha.js
sniff/: AT.c  AT.h  AT.md  CAT.c  CAT.h  CLASS.c  CLASS.h  CMakeLists.txt  DEL.c  DEL.h  GET.c  GET.h  INDEX.md  LS.c  LS.h  PATCH.c  PATCH.h  POST.c  POST.h  PUT.c  PUT.h  SNIFF.c  SNIFF.cli.c  SNIFF.exe.c  SNIFF.h  STAGE.md  SUBS.c  SUBS.h  WATCH.c  WATCH.h
sniff/test/: CMakeLists.txt  SNIFF.c  branchdel.sh  contam.sh  cross-post.sh  dirty.sh  fragref.sh  idempotent.sh  ls.sh  norepo.sh  patch.sh  post-ff.sh  refuse.sh  relref.sh  restore.sh  shareset.sh  squash.sh  workflow.sh
spot/: CAPO.c  CAPO.cli.c  CAPO.exe.c  CAPO.h  CAPOi.h  CMakeLists.txt  GREP.c  INDEX.md  LESS.c  LESS.h  README.md  SPOT.c  SPOT.h
spot/test/: CAPO.c  CMakeLists.txt  SPOT.c
spot/test/data/: slice_init.hili  slice_init.spot
test/: CMakeLists.txt  INDEX.md  TODO.md  run.sh
test/blame/: INDEX.md
test/commit/: INDEX.md
test/diff/: INDEX.md  run.sh
test/get/: INDEX.md  run.sh
test/head/: INDEX.md  run.sh
test/lib/: branches.sh  case.sh  repo-setup.sh  spot-case.sh  sub-deep.sh  subfix_parent_main_v1.c  subfix_parent_main_v2.c  subfix_parent_main_v3.c  subfix_parent_util_v1.c  subfix_parent_util_v2.c  subfix_sub_core_v1.c  subfix_sub_core_v2.c  subfix_sub_core_v3.c  subfix_sub_helper_v1.c  submodules.sh  verb.sh
test/log/: run.sh
test/post/: INDEX.md  run.sh
test/put/: INDEX.md  run.sh
test/spot/: INDEX.md  run.sh
test/tree/: INDEX.md  run.sh
verbs/delete/: delete.js
verbs/done/: done.js
verbs/get/: get.js
verbs/head/: head.js
verbs/ls/: ls.js
verbs/lsr/: lsr.js
verbs/mark/: mark.js  render.js
verbs/nvim/: nvim.js
verbs/patch/: fetchleg.js  patch.js
verbs/post/: fold-commit.js  fold-decide.js  post.js
verbs/put/: put.js
verbs/rss/: rss.js
verbs/status/: status.js
verbs/vim/: vim.js
view/: bro.js  quadrender.js  render.js  theme.js
views/blob/: blob.js
views/bro/: bro.js  pager.js
views/cat/: cat.js
views/commit/: commit.js
views/diff/: diff.js
views/du/: du.js
views/list/: list.js
views/log/: log.js
views/ls/: ls.js
views/refs/: refs.js
woof/: CMakeLists.txt  CONN.c  INDEX.md  ROUTE.c  WOOF.c  WOOF.cli.c  WOOF.h  style.css
woof/fuzz/: CMakeLists.txt  URI.c
woof/test/: CMakeLists.txt  HTTP.c  HUNKLEAK.c  STATIC.c
(+437 files in other folders)
